# cvmfs-cache-hdfs

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLibCvmfsCache.cmake
conf/: cms.osgstorage.org.conf  cvmfs-cache-hdfs  cvmfs-cache-hdfs.conf  cvmfs-cache-hdfs.logrotate  cvmfs-cache-hdfs.spec  ligo.osgstorage.org.conf  osgstorage.org.conf
src/: cvmfs_cache_hdfs.cc  cvmfs_cache_hdfs_plugin.in
